--- a/index.html
+++ b/index.html
@@ -98,15 +98,19 @@
       <li class="nav-item dropdown">
         <a class="nav-link dropdown-toggle" href="#" id="pagesDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
           <i class="fas fa-fw fa-folder"></i>
-          <span>Pages</span>
+          <span>Páginas</span>
         </a>
         <div class="dropdown-menu" aria-labelledby="pagesDropdown">
-          <h6 class="dropdown-header">Login Screens:</h6>
+          <h6 class="dropdown-header">Tela de Login:</h6>
           <a class="dropdown-item" href="login.html">Login</a>
-          <a class="dropdown-item" href="register.html">Register</a>
-          <a class="dropdown-item" href="forgot-password.html">Forgot Password</a>
+          <a class="dropdown-item" href="register.html">Registrar</a>
+          <a class="dropdown-item" href="forgot-password.html">Esqueci minha senha</a>
           <div class="dropdown-divider"></div>
-          <h6 class="dropdown-header">Other Pages:</h6>
+          <h6 class="dropdown-header">Instituições:</h6>
+          <a class="dropdown-item" href="404.html">Benificiários</a>
+          <a class="dropdown-item" href="404.html">Instituições</a>
+          <a class="dropdown-item" href="404.html">Doadores</a>
+          <a class="dropdown-item" href="404.html">Cursos</a>
           <a class="dropdown-item" href="404.html">404 Page</a>
           <a class="dropdown-item" href="blank.html">Blank Page</a>
         </div>
