--- a/NovaInstituicao.html
+++ b/NovaInstituicao.html
@@ -349,13 +349,13 @@
     var url = '/CadastrarInstituicao/';
 
     var nome = $('#nomeInstituicao').val();
-    var cpnj = $('#nomeInstituicao').val();
-    var telefone = $('#nomeInstituicao').val();
-    var email = $('#nomeInstituicao').val();
-    var responsavel = $('#nomeInstituicao').val();
-    var descricao = $('#nomeInstituicao').val();
-    var conta = $('#nomeInstituicao').val();
-    var agencia = $('#nomeInstituicao').val();
+    var cpnj = $('#cnpj').val();
+    var telefone = $('#telefone').val();
+    var email = $('#email').val();
+    var responsavel = $('#resposavel').val();
+    var descricao = $('#descricao').val();
+    var conta = $('#conta').val();
+    var agencia = $('#agencia').val();
 
     $.ajax({
       url: url,
@@ -376,7 +376,7 @@
       // EXIBIR MODAL OU ALERT?
 
     });
+    
   });
-
 
 </script>
