--- a/register.html
+++ b/register.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 
 <head>
 
@@ -7,9 +7,9 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <meta name="description" content="">
-  <meta name="author" content="">
+  <meta name="author" content="Márcio Júnio Praxedes">
 
-  <title>SB Admin - Register</title>
+  <title>CrowFunding - Registro</title>
 
   <!-- Custom fonts for this template-->
   <link href="vendor/fontawesome-free/css/all.min.css" rel="stylesheet" type="text/css">
@@ -21,57 +21,51 @@
 
 <body class="bg-dark">
 
-  <div class="container">
-    <div class="card card-register mx-auto mt-5">
-      <div class="card-header">Register an Account</div>
-      <div class="card-body">
-        <form>
-          <div class="form-group">
-            <div class="form-row">
-              <div class="col-md-6">
-                <div class="form-label-group">
-                  <input type="text" id="firstName" class="form-control" placeholder="First name" required="required" autofocus="autofocus">
-                  <label for="firstName">First name</label>
+  <div class="containter-fluid">
+    <div class="container card-login mx-auto mt-5">
+      <br><br><br>
+      <div class="text-white text-center h3">Registrar no CrowFunding</div>
+              <!-- Icon Cards-->
+              <div class="row">
+                  <div class="col-sm-12 mb-3">
+                    <p>
+                    <div class="card text-white bg-primary o-hidden h-100">
+                      <div class="card-body">
+                        <div class="card-body-icon">
+                          <i class="fas fa-fw fa-comments"></i>
+                        </div>
+                        <div class="h3">Aluno</div>
+                      </div>
+                      <a class="card-footer text-white clearfix small z-1" href="#">
+                        <span class="float-left">Registrar</span>
+                        <span class="float-right">
+                          <i class="fas fa-angle-right"></i>
+                        </span>
+                      </a>
+                    </div>
+                  </p>
+                  </div>
+                  <div class="col-sm-12 mb-3">
+                  <p>
+                    <div class="card text-white bg-warning o-hidden h-100">
+                        <div class="card-body">
+                          <div class="card-body-icon">
+                            <i class="fas fa-fw fa-list"></i>
+                          </div>
+                          <div class="h3">Criar nova Instituição</div>
+                        </div>
+                        <a class="card-footer text-white clearfix small z-1" href="pages/Instituicao/registrarInstituicao.html">
+                          <span class="float-left">Registrar</span>
+                          <span class="float-right">
+                            <i class="fas fa-angle-right"></i>
+                          </span>
+                        </a>
+                      </div>
+                    </p>
+                  </div>
+
                 </div>
               </div>
-              <div class="col-md-6">
-                <div class="form-label-group">
-                  <input type="text" id="lastName" class="form-control" placeholder="Last name" required="required">
-                  <label for="lastName">Last name</label>
-                </div>
-              </div>
-            </div>
-          </div>
-          <div class="form-group">
-            <div class="form-label-group">
-              <input type="email" id="inputEmail" class="form-control" placeholder="Email address" required="required">
-              <label for="inputEmail">Email address</label>
-            </div>
-          </div>
-          <div class="form-group">
-            <div class="form-row">
-              <div class="col-md-6">
-                <div class="form-label-group">
-                  <input type="password" id="inputPassword" class="form-control" placeholder="Password" required="required">
-                  <label for="inputPassword">Password</label>
-                </div>
-              </div>
-              <div class="col-md-6">
-                <div class="form-label-group">
-                  <input type="password" id="confirmPassword" class="form-control" placeholder="Confirm password" required="required">
-                  <label for="confirmPassword">Confirm password</label>
-                </div>
-              </div>
-            </div>
-          </div>
-          <a class="btn btn-primary btn-block" href="login.html">Register</a>
-        </form>
-        <div class="text-center">
-          <a class="d-block small mt-3" href="login.html">Login Page</a>
-          <a class="d-block small" href="forgot-password.html">Forgot Password?</a>
-        </div>
-      </div>
-    </div>
   </div>
 
   <!-- Bootstrap core JavaScript-->
