--- a/register.html
+++ b/register.html
@@ -34,9 +34,9 @@
                         <div class="card-body-icon">
                           <i class="fas fa-fw fa-comments"></i>
                         </div>
-                        <div class="h3">Aluno</div>
+                        <div class="h3">Registrar novo Aluno</div>
                       </div>
-                      <a class="card-footer text-white clearfix small z-1" href="#">
+                      <a class="card-footer text-white clearfix small z-1" href="pages/Aluno/registrarAluno.html">
                         <span class="float-left">Registrar</span>
                         <span class="float-right">
                           <i class="fas fa-angle-right"></i>
@@ -52,7 +52,7 @@
                           <div class="card-body-icon">
                             <i class="fas fa-fw fa-list"></i>
                           </div>
-                          <div class="h3">Criar nova Instituição</div>
+                          <div class="h3">Registrar nova Instituição</div>
                         </div>
                         <a class="card-footer text-white clearfix small z-1" href="pages/Instituicao/registrarInstituicao.html">
                           <span class="float-left">Registrar</span>
