--- a/Pages/Aluno/registrarAluno.html
+++ b/Pages/Aluno/registrarAluno.html
@@ -113,6 +113,26 @@
                 A descrição da instituição é obrigatória.
               </div>
             </div>
+            <div class="col-md-6 mb-3">
+              <label for="senha">Digite uma senha</label>
+                  <input type="text" class="form-control" id="senha" name="senha" placeholder="Senha" required>
+                <div class="valid-feedback">
+                  Parece bom!
+                </div>
+                <div class="invalid-feedback">
+                  Digite uma senha válida.
+                </div>
+            </div>
+            <div class="col-md-6 mb-3">
+              <label for="confirmaSenha">Confirme sua senha</label>
+                  <input type="text" class="form-control" id="confirmaSenha" name="confirmaSenha" placeholder="Confirme sua senha" required>
+                <div class="valid-feedback">
+                  Parece bom!
+                </div>
+                <div class="invalid-feedback">
+                  As senhas não são iguais.
+                </div>
+            </div>
 
           </div>
           <h3 class="text-center">Dados de Moradia</h3>
