--- a/Pages/Instituicao/registrarInstituicao.html
+++ b/Pages/Instituicao/registrarInstituicao.html
@@ -139,46 +139,84 @@
                 </div>
               </div>
             </div>
+            
+            <div class="col-md-6 mb-3">
+              <label for="senha">Digite uma senha</label>
+                  <input type="text" class="form-control" id="senha" name="senha" placeholder="Senha" required>
+                <div class="valid-feedback">
+                  Parece bom!
+                </div>
+                <div class="invalid-feedback">
+                  Digite uma senha válida.
+                </div>
+            </div>
+            <div class="col-md-6 mb-3">
+              <label for="confirmaSenha">Confirme sua senha</label>
+                  <input type="text" class="form-control" id="confirmaSenha" name="confirmaSenha" placeholder="Confirme sua senha" required>
+                <div class="valid-feedback">
+                  Parece bom!
+                </div>
+                <div class="invalid-feedback">
+                  As senhas não são iguais.
+                </div>
+            </div>
+
+          </div>
+          <h3 class="text-center">Dados de Moradia</h3>
+          <hr style="border-color: white;">
+          <div class="form-row">  
             <div class="col-md-3 mb-3">
-                <label for="validationCustomAgencia">Bairro</label>
-                    <input type="text" class="form-control" id="bairro" name="nome" placeholder="Bairro" required>
+                <label for="validationCustomAgencia">Rua</label>
+                    <input type="text" class="form-control" id="rua" name="rua" placeholder="Rua" required>
                   <div class="valid-feedback">
                     Parece bom!
                   </div>
                   <div class="invalid-feedback">
-                    Digite um E-mail.
+                    Digite o nome da sua rua.
                   </div>
               </div>
               <div class="col-md-3 mb-3">
+                <label for="validationCustomAgencia">Numero</label>
+                    <input type="text" class="form-control" id="numero" name="numero" placeholder="Número" required>
+                  <div class="valid-feedback">
+                    Parece bom!
+                  </div>
+                  <div class="invalid-feedback">
+                    Digite um número.
+                  </div>
+              </div>
+              <div class="col-md-6 mb-3">
                   <label for="validationCustomAgencia">Bairro</label>
-                      <input type="text" class="form-control" id="bairro" name="nome" placeholder="Bairro" required>
+                      <input type="text" class="form-control" id="bairro" name="bairro" placeholder="Bairro" required>
                     <div class="valid-feedback">
                       Parece bom!
                     </div>
                     <div class="invalid-feedback">
-                      Digite um E-mail.
+                      Digite o bairro.
                     </div>
                 </div>
-                <div class="col-md-3 mb-3">
-                    <label for="validationCustomAgencia">Bairro</label>
-                        <input type="text" class="form-control" id="bairro" name="nome" placeholder="Bairro" required>
+
+                <div class="col-md-6 mb-3">
+                    <label for="validationCustomAgencia">Complemento</label>
+                        <input type="text" class="form-control" id="bairro" name="complemento" placeholder="Complemento" required>
                       <div class="valid-feedback">
                         Parece bom!
                       </div>
                       <div class="invalid-feedback">
-                        Digite um E-mail.
+                        Digite o Complemento.
                       </div>
                   </div>
-                <div class="col-md-3 mb-3">
-                    <label for="validationCustomAgencia">Bairro</label>
-                        <input type="text" class="form-control" id="bairro" name="nome" placeholder="Bairro" required>
+                  <div class="col-md-6 mb-3">
+                    <label for="validationCustomAgencia">Logradouro</label>
+                        <input type="text" class="form-control" id="logradouro" name="logradouro" placeholder="Logradouro" required>
                       <div class="valid-feedback">
                         Parece bom!
                       </div>
                       <div class="invalid-feedback">
-                        Digite um E-mail.
+                        Digite o Logradouro.
                       </div>
                   </div>
+                </div>
                   <button class="btn btn-primary" id="btnCadastrar">Cadastrar</button>
           </div>
          
