--- a/Pages/Aluno/registrarAluno.html
+++ b/Pages/Aluno/registrarAluno.html
@@ -29,11 +29,10 @@
         <hr style="border-color: white;">
         <p class="text-center">Insira corretamente todos os dados do Aluno</p>
 
-
         <form class="needs-validation" novalidate>
           <div class="form-row">
             <div class="col-md-12 mb-3">
-              <label for="nomeInstituicao">Nome do Aluno</label>
+              <label for="nomeAluno">Nome do Aluno</label>
               <input type="text" class="form-control" id="nomeAluno" name="nome" placeholder="Nome da Aluno"
                 required>
               <div class="valid-feedback">
@@ -54,12 +53,12 @@
               </div>
             </div>
             <div class="col-md-4 mb-3">
-              <label for="validationCustomTelefone">Telefone</label>
+              <label for="telefone">Telefone</label>
               <div class="input-group">
                 <div class="input-group-prepend">
                   <span class="input-group-text" id="inputGroupPrepend">+55</span>
                 </div>
-                <input type="text" class="form-control" id="validationCustomTelefone" name="telefone"
+                <input type="text" class="form-control" id="telefone" name="telefone"
                   placeholder="Telefone" aria-describedby="inputGroupPrepend" required>
                 <div class="valid-feedback">
                   Parece bom!
@@ -70,12 +69,12 @@
               </div>
             </div>
             <div class="col-md-3 mb-3">
-              <label for="validationCustomConta">Renda per capta</label>
+              <label for="rendaPerCapita">Renda per capta</label>
               <div class="input-group">
                 <div class="input-group-prepend">
                   <span class="input-group-text" id="inputGroupPrepend">R$</span>
                 </div>
-                <input type="text" class="form-control" id="validationCustomConta" name="rendaPerCapta"
+                <input type="text" class="form-control" id="rendaPerCapita" name="rendaPerCapta"
                   aria-describedby="inputGroupPrepend" required>
                 <div class="valid-feedback">
                   Parece bom!
@@ -86,12 +85,12 @@
               </div>
             </div>
             <div class="col-md-12 mb-3">
-              <label for="validationCustomEmail">E-mail</label>
+              <label for="email">E-mail</label>
               <div class="input-group">
                 <div class="input-group-prepend">
                   <span class="input-group-text" id="inputGroupPrepend">@</span>
                 </div>
-                <input type="text" class="form-control" id="validationCustomEmail" name="email" placeholder="E-mail"
+                <input type="text" class="form-control" id="email" name="email" placeholder="E-mail"
                   aria-describedby="inputGroupPrepend" required>
                 <div class="valid-feedback">
                   Parece bom!
@@ -103,8 +102,8 @@
             </div>
 
             <div class="col-md-12 mb-3">
-              <label for="validationCustom04">Descrição do perfil</label>
-              <textarea type="text" class="form-control" id="validationCustom04" name="descricao"
+              <label for="descricaoPerfil">Descrição do perfil</label>
+              <textarea type="text" class="form-control" id="descricaoPerfil" name="descricaoPerfil"
                 placeholder="Descreva seu perfil com poucas palavras" required></textarea>
               <div class="valid-feedback">
                 Parece bom!
@@ -139,7 +138,7 @@
           <hr style="border-color: white;">
           <div class="form-row">  
             <div class="col-md-3 mb-3">
-                <label for="validationCustomAgencia">Rua</label>
+                <label for="rua">Rua</label>
                     <input type="text" class="form-control" id="rua" name="rua" placeholder="Rua" required>
                   <div class="valid-feedback">
                     Parece bom!
@@ -149,8 +148,8 @@
                   </div>
               </div>
               <div class="col-md-3 mb-3">
-                <label for="validationCustomAgencia">Numero</label>
-                    <input type="text" class="form-control" id="numero" name="numero" placeholder="Número" required>
+                <label for="numeroPropriedade">Numero</label>
+                    <input type="text" class="form-control" id="numeroPropriedade" name="numeroPropriedade" placeholder="Número" required>
                   <div class="valid-feedback">
                     Parece bom!
                   </div>
@@ -159,7 +158,7 @@
                   </div>
               </div>
               <div class="col-md-6 mb-3">
-                  <label for="validationCustomAgencia">Bairro</label>
+                  <label for="bairro">Bairro</label>
                       <input type="text" class="form-control" id="bairro" name="bairro" placeholder="Bairro" required>
                     <div class="valid-feedback">
                       Parece bom!
@@ -170,8 +169,8 @@
                 </div>
 
                 <div class="col-md-6 mb-3">
-                    <label for="validationCustomAgencia">Complemento</label>
-                        <input type="text" class="form-control" id="bairro" name="complemento" placeholder="Complemento" required>
+                    <label for="complemento">Complemento</label>
+                        <input type="text" class="form-control" id="complemento" name="complemento" placeholder="Complemento" required>
                       <div class="valid-feedback">
                         Parece bom!
                       </div>
@@ -180,7 +179,7 @@
                       </div>
                   </div>
                   <div class="col-md-6 mb-3">
-                    <label for="validationCustomAgencia">Logradouro</label>
+                    <label for="logradouro">Logradouro</label>
                         <input type="text" class="form-control" id="logradouro" name="logradouro" placeholder="Logradouro" required>
                       <div class="valid-feedback">
                         Parece bom!
@@ -228,25 +227,31 @@
 </script>
 
 <script>
-  // Cadastrar turma no sistema
-
-
+  // Cadastrar aluno no sistema
 
   $('#btnCadastrar').click(function () {
-    var url = 'http://localhost:8080/instituicoes';
- /*
-   
+    var url = 'http://localhost:8080/alunos';
 
-    var nome = $('#nomeInstituicao').val();
-    var cpnj = $('#cnpj').val();
-    var telefone = $('#telefone').val();
-    var email = $('#email').val();
-    var responsavel = $('#resposavel').val();
-    var descricao = $('#descricao').val();
-    var conta = $('#conta').val();
-    var agencia = $('#agencia').val();
-*/
-    var data = { nome: "teste"};
+
+     var data = { 
+       //class(model) aluno
+      nome: $('#nomeAluno').val(),
+      telefone: $('#telefone').val(),
+      email: $('#email').val(),
+      dataNascimento: $('#dataNascimento').val(),
+      cpf: $('#cpf').val(),
+      descricaoPerfil: $('#descricaoPerfil').val(),      
+      rendaPerCapita: $('#rendaPerCapita').val(),
+      senha: $('#senha').val(),
+      //class endereço
+      rua: $('#rua').val(),
+      bairro: $('#bairro').val(),
+      numeroPropriedade:$('#numeroPropriedade').val(),
+      complemento:$('#complemento').val(),
+      logradouro: $('#logradouro').val()
+      
+
+    };
     var type = "json";
     call(url, type, data);
     
@@ -259,7 +264,7 @@
     headers: {
       'Content-Type': 'application/json'
     },
-		data : (data) ? JSON.stringify(data) : "",
+		data : JSON.stringify(data),
 		dataType : type
 	});
 
