--- a/Pages/Instituicao/indexInstituicao.html
+++ b/Pages/Instituicao/indexInstituicao.html
@@ -58,30 +58,29 @@
     <!-- Sidebar -->
     <ul class="sidebar navbar-nav">
       <li class="nav-item active">
-        <a class="nav-link" href="/Pages/Instituicao/cursos.html">
+        <a class="nav-link" href="indexInstituicao.html">
           <i class="fas fa-fw fa-tachometer-alt"></i>
           <span>Inicio</span>
         </a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="/Pages/Instituicao/cursos.html">
+        <a class="nav-link" href="cursos.html">
           <i class="fas fa-fw fa-tachometer-alt"></i>
           <span>Cursos</span>
         </a>
       </li>
       <li class="nav-item">
-          <a class="nav-link" href="index.html">
-            <i class="fas fa-fw fa-tachometer-alt"></i>
-            <span>Alunos</span>
-          </a>
-        </li>
-        <li class="nav-item">
-            <a class="nav-link" href="index.html">
-              <i class="fas fa-fw fa-tachometer-alt"></i>
-              <span>Filiais</span>
-            </a>
-          </li>
-
+        <a class="nav-link" href="turmas.html">
+          <i class="fas fa-fw fa-tachometer-alt"></i>
+          <span>Turmas</span>
+        </a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="alunos.html">
+          <i class="fas fa-fw fa-tachometer-alt"></i>
+          <span>Alunos</span>
+        </a>
+      </li>
     </ul>
 
     <div id="content-wrapper">
